[gd_scene load_steps=26 format=3 uid="uid://cgshgrem1j5uk"]

[ext_resource type="Script" path="res://Scripts/Bullets/advanced_ricochet_bullet.gd" id="1_ug471"]
[ext_resource type="PackedScene" uid="uid://6qqwyt6lrfmo" path="res://Scripts/Visuals/trace.tscn" id="2_puxhx"]
[ext_resource type="Texture2D" uid="uid://cup88ux63f0si" path="res://Sprites/Bullets/NewBullets/XNewerBullet1.png" id="2_v84vs"]
[ext_resource type="Texture2D" uid="uid://cys1ri8b2lnup" path="res://Sprites/Bullets/NewBullets/XNewerBullet2.png" id="3_im536"]
[ext_resource type="Texture2D" uid="uid://6sl66ghfc0yb" path="res://Sprites/Bullets/NewBullets/XNewerBullet3.png" id="4_t0pul"]
[ext_resource type="Texture2D" uid="uid://d05q7c2mkfolj" path="res://Sprites/Bullets/NewBullets/XNewerBullet4.png" id="5_o7u4b"]
[ext_resource type="Texture2D" uid="uid://ciqfpo1yom65k" path="res://Sprites/Bullets/NewBullets/XNewerBullet5.png" id="6_b4epe"]
[ext_resource type="Texture2D" uid="uid://dgktk4xmbg6sq" path="res://Sprites/Bullets/NewBullets/XNewerBullet6.png" id="7_lfnw7"]
[ext_resource type="Texture2D" uid="uid://5bviap0h2gp" path="res://Sprites/Bullets/NewBullets/XNewerBullet7.png" id="8_1gud3"]
[ext_resource type="Texture2D" uid="uid://dl03ttlb24ada" path="res://Sprites/Explosion/explosion1.png" id="9_06wn0"]
[ext_resource type="Texture2D" uid="uid://5s68k1m80jpj" path="res://Sprites/Bullets/NewBullets/XNewerBullet8.png" id="9_jdjhi"]
[ext_resource type="Texture2D" uid="uid://bvbdowigv2yk1" path="res://Sprites/Light/light1.png" id="9_pgq7h"]
[ext_resource type="Texture2D" uid="uid://dt4xoaxgrgijr" path="res://Sprites/Explosion/explosion2.png" id="10_n84x8"]
[ext_resource type="Texture2D" uid="uid://b5gger2f4230r" path="res://Sprites/Explosion/explosion3.png" id="11_i8bi0"]
[ext_resource type="Texture2D" uid="uid://bodebyb4vgk07" path="res://Sprites/Explosion/explosion4.png" id="12_6go1u"]
[ext_resource type="Texture2D" uid="uid://biskv30bbbw7q" path="res://Sprites/Explosion/explosion5.png" id="13_3mo0f"]
[ext_resource type="Texture2D" uid="uid://cb2clutnd13pb" path="res://Sprites/Explosion/explosion6.png" id="14_5mpy7"]
[ext_resource type="AudioStream" uid="uid://kln5iq4wunqx" path="res://Sounds/Hit Sounds/hitHurtEnemy.wav" id="18_np4gy"]
[ext_resource type="AudioStream" uid="uid://dexal3sakhmia" path="res://Sounds/Hit Sounds/hitHurtBad.wav" id="19_mcy82"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nv1bt"]
radius = 1.99998
height = 6.39962

[sub_resource type="SpriteFrames" id="SpriteFrames_dght0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v84vs")
}, {
"duration": 1.0,
"texture": ExtResource("3_im536")
}, {
"duration": 1.0,
"texture": ExtResource("4_t0pul")
}, {
"duration": 1.0,
"texture": ExtResource("5_o7u4b")
}, {
"duration": 1.0,
"texture": ExtResource("6_b4epe")
}, {
"duration": 1.0,
"texture": ExtResource("7_lfnw7")
}, {
"duration": 1.0,
"texture": ExtResource("8_1gud3")
}, {
"duration": 1.0,
"texture": ExtResource("9_jdjhi")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_dv2qf"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20f2r"]
_data = {
"explosion": SubResource("Animation_dv2qf")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_upr37"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_06wn0")
}, {
"duration": 1.0,
"texture": ExtResource("10_n84x8")
}, {
"duration": 1.0,
"texture": ExtResource("11_i8bi0")
}, {
"duration": 1.0,
"texture": ExtResource("12_6go1u")
}, {
"duration": 1.0,
"texture": ExtResource("13_3mo0f")
}, {
"duration": 1.0,
"texture": ExtResource("14_5mpy7")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5m1w"]
size = Vector2(4, 6)

[node name="AdvancedRicochetBullet" type="CharacterBody2D" groups=["player_bullets"]]
collision_layer = 2
collision_mask = 4
motion_mode = 1
script = ExtResource("1_ug471")

[node name="Hitbox" type="Area2D" parent="." groups=["ricochet_bullets"]]
collision_layer = 2
collision_mask = 4

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2.19345e-05, -0.19981)
shape = SubResource("CapsuleShape2D_nv1bt")

[node name="BulletCast" type="RayCast2D" parent="."]
visible = false
position = Vector2(-6.19888e-05, 0.0881703)
scale = Vector2(0.667571, 1.85699)
target_position = Vector2(0, 19.2169)
collide_with_areas = true

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Trace" parent="." instance=ExtResource("2_puxhx")]

[node name="BulletSprite" type="AnimatedSprite2D" parent="."]
rotation = 1.57079
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_dght0")
frame_progress = 0.484393

[node name="PointLight2D" type="PointLight2D" parent="BulletSprite"]
energy = 0.7
texture = ExtResource("9_pgq7h")
texture_scale = 0.12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_20f2r")
}

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.176471)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_upr37")

[node name="RicochetSoundPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
pitch_scale = 0.6
max_polyphony = 5

[node name="HitSoundPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_np4gy")

[node name="BadHitSoundPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_mcy82")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(5.96046e-08, 0)
shape = SubResource("RectangleShape2D_y5m1w")

[node name="RicochetTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DestructionDelayTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="HitstopTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
radius = 6.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_destruction_timer_timeout"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="timeout" from="DestructionDelayTimer" to="." method="_on_destruction_delay_timer_timeout"]
[connection signal="timeout" from="HitstopTimer" to="." method="_on_hitstop_timer_timeout"]
